--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-.App
-{
+.App {
   display: flex;
   justify-content: center;
   /* min-height: 100vh; */
@@ -8,64 +7,57 @@
   padding-top: 80px;
 }
 
-.quote{
-
+.quote {
+  margin-top: 100px;
+  margin-bottom: 15px;
   background-image: url(./assets/quotes5.jpg);
-  background-size:cover ;
+  background-size: cover;
   width: 450px;
-  height: 320px;
- /* max-width: 620px;
+  height: 330px;
+  /* max-width: 620px;
  max-height: 500px; */
 
   border-radius: 10px;
-  
+
   display: flex;
   justify-content: center;
   /* min-height: 100vh; */
   align-items: center;
   flex-direction: column;
-
-
-
 }
 
-
-.quote h2{
+.quote h2 {
   padding-left: 100px;
   padding-right: 80px;
-  
- 
+
   font-size: 20px;
   min-width: 6px;
   text-shadow: 4px 4px 4px #aaa;
   font-family: cursive;
-
 }
 
-.quote small{
+.quote small {
   font-size: 16px;
   text-shadow: 4px 4px 4px #aaa;
   font-family: cursive;
 }
 
-.btn{
-display: block;
-border: 2px solid #008CBA;
-background: transparent;
-padding: 10px 15px;
-color: #008CBA;
-font-size: 20px;
-border-radius: 5px;
-cursor: pointer;
-outline: none;
-transition: background 1s, color 1s;
-
-
+.btn {
+  margin-top: 20px;
+  display: block;
+  border: 2px solid #008cba;
+  background: transparent;
+  padding: 10px 15px;
+  color: #008cba;
+  font-size: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  transition: background 1s, color 1s;
 }
 
-.btn:hover{
-  background: #008CBA;
+.btn:hover {
+  background: #008cba;
   color: #ffff;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px0 rgba(0,0,0,0.19);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px0 rgba(0, 0, 0, 0.19);
 }
-
